@@ -19,3 +19,19 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+//编译
+tasks.withType(JavaCompile).all {
+    options.compilerArgs += '--enable-preview'
+    options.compilerArgs += "-Xlint:unchecked"
+}
+
+//执行
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
+}
+
+//调试
+tasks.withType(JavaDebugOptions) {
+    jvmArgs += '--enable-preview'
+}
